--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.10",
     "stripe": "^19.1.0",
     "svix": "^1.76.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "ws": "^8.18.3"
   }
 }
