--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
+    "redis": "^5.9.0",
     "stripe": "^19.1.0",
     "svix": "^1.76.1",
     "validator": "^13.15.15",
+    "web-push": "^3.6.7",
     "ws": "^8.18.3"
   }
 }
