getting  price currency absed on country

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@clerk/express": "^1.7.36",
     "@sentry/node": "^10.17.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "country-to-currency": "^2.0.2",
+    "currency-symbol-map": "^5.1.0",
+    "currency.js": "^2.0.4",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
